# pyunifi_ng

./: .gitignore  README.md  pyproject.toml
examples/: dhcp_csv.py  dhcp_import.py  fixedip.csv  group_update.py  whitelist.py
src/pyunifi_ng/: client.py
tests/: opnsense.xml  test_client.py
